Bug 44019 - String format fix
Summary: String format fix
Status: RESOLVED FIXED
Alias: None
Product: Spice
Classification: Unclassified
Component: spice-gtk (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Spice Bug List
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-21 07:09 UTC by Olav Vitters
Modified: 2011-12-21 16:43 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
string format fix (554 bytes, patch)
2011-12-21 07:09 UTC, Olav Vitters
Details | Splinter Review

Description Olav Vitters 2011-12-21 07:09:50 UTC
Created attachment 54644 [details] [review]
string format fix

Patch from Mageia (wally), not me.
Comment 1 Marc-Andre Lureau 2011-12-21 16:43:44 UTC
commit 8544a680f5baad9d21caeb44b809c0ade551c244
Author: Jani Välimaa <wally@mageia.org>
Date:   Thu Dec 22 01:41:52 2011 +0100

    build: string format fix
    
    https://bugs.freedesktop.org/show_bug.cgi?id=44019


thanks!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.