build: string format fix

https://bugs.freedesktop.org/show_bug.cgi?id=44019